# markdown_spa

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.py  config.ini  index.html  local.py  pyproject.toml  serve.py  setup.sh  watch.py
.github/workflows/: pypi.yml  static.yml
assets/: script.js  style.css
blank/: config.ini  tailwind.config.js
blank/.github/workflows/: static.yml
blank/assets/: script.js  style.css
blank/templates/: nav.html
doc/: config.ini
doc/pages/: deployment.md  extensions.md  features.md  index.md
doc/pages/extensions/: sass.md  sitemap.md  tailwind.md
doc/pages/features/: attributes.md  code.md  json.md  spa.md  styling.md  templating.md  toc.md
doc/scss/: code.scss  main.scss
doc/static/: markdown_spa.js  script.js
doc/templates/: base.html  nav.html  sitemap.xml
pages/: deployment.md  index.md
pages/features/: code.md  index.md  sass.md
pages/sub/: index.md  test.md
scss/: code.scss  default.scss  main.scss  pygments.scss
src/markdown_spa/: __init__.py  __main__.py  config.py  generator.py  packages.py
src/markdown_spa/cli/: __init__.py  extensions.py  project.py  utils.py
src/markdown_spa/cli/blank/: config.ini
src/markdown_spa/cli/blank/.github/workflows/: static.yml
src/markdown_spa/cli/blank/assets/: markdown_spa.js  script.js
src/markdown_spa/cli/blank/pages/: index.md  other.md
src/markdown_spa/cli/blank/templates/: base.html  nav.html
src/markdown_spa/extensions/: __init__.py  extension.py
src/markdown_spa/extensions/SASS/: SASS.py  __init__.py  main.scss
src/markdown_spa/extensions/Sitemap/: Sitemap.py  __init__.py  robots.txt
src/markdown_spa/extensions/Tailwind/: Tailwind.py  __init__.py
src/markdown_spa/generator/: __init__.py  cli.py  config.py  extension.py  generator.py
static/: default.css  pygments.css  script.js  style.css
templates/: base.html  category.html  index.html  item.html  macros.html  nav.html  sitemap.xml
