[build-system]
requires = ['flit_core>=3.2,<4']
build-backend = 'flit_core.buildapi'

[project.urls]
Homepage = "https://github.com/MrSpaar/markdown_spa"
Documentation = "https://mrspaar.github.io/markdown_spa/"
Issues = "https://github.com/MrSpaar/markdown_spa/issues"

[project.scripts]
markdown_spa = "markdown_spa:main"

[project]
name = "markdown_spa"
readme = "README.md"
requires-python = ">=3.8"
description = "A static site generator for Markdown files."
dynamic = ["version"]
license = {file = "LICENSE"}
authors = [{name = "MrSpaar"}]
dependencies = [
    "markdown", "jinja2",
    "pygments", "click",
    "requests", "importlib_metadata",
    "colorama; platform_system == 'Windows'"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
